--- a/Lezione_1/index.html
+++ b/Lezione_1/index.html
@@ -4,10 +4,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lezione 1</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
+    <!-- Heading - tag per titoli (h1 -> h6) -->
+    <!-- h1 è il più importante -->
+    <h1 style="font-size: 300%;">Questa è la lezione 1</h1>
+
+
+    <p style="color: blueviolet;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta nihil mollitia sunt
+        numquam voluptate, dolor modi
+        corporis velit aliquam minus, recusandae maxime omnis, aspernatur nulla voluptatibus voluptas ad odit. Soluta,
+        voluptates earum, ab sed perspiciatis voluptatem maiores alias reiciendis laudantium repellendus perferendis.
+        Explicabo error incidunt aliquam voluptates cupiditate porro saepe.</p>
+
+    <h2>
+        <!-- Titolo cliccabile -->
+
+        <a href="https:www.its-ictpiemonte.it" target="_blank">ITS Academy</a>
+    </h2>
+    <!--Immagine copertina libro-->
+    <img src="./img/copertina_libro_il_barone_rampante.jpg"
+        alt="Copertina del libro Il Barone Rampante di Italo Calvino" title="Il Barone Rampante di Italo Calvino"
+        style="width: 200px; height: auto;">
+    <p title="Il Barore rampante Italo Calvino">
+        Il baroner rampante è un romanzo di Italo Calvino pubblicato nel 1957. Racconta la storia di Cosimo Piovasco di
+        Rondò, un giovane nobile che decide di vivere sugli alberi per sfuggire alle convenzioni sociali e alla rigidità
+        della sua famiglia. Il romanzo esplora temi come la libertà, l'individualismo e la critica alla società del
+        tempo, offrendo una narrazione ricca di fantasia e simbolismo.
+    </p>
+    <p title="Trama del Barone rampante" style="color: blue;">
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla repellendus quibusdam, iure quasi labore
+        sapiente quo dicta, quam tempore ipsam, et esse facere quas. Voluptas delectus qui adipisci vel quia.
+
+    </p>
 
 </body>
 
