--- a/Lezione_1/index.html
+++ b/Lezione_1/index.html
@@ -14,24 +14,19 @@
     <h1 style="font-size: 300%;">Questa è la lezione 1</h1>
 
 
-    <p style="color: blueviolet;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta nihil mollitia sunt
-        numquam voluptate, dolor modi
-        corporis velit aliquam minus, recusandae maxime omnis, aspernatur nulla voluptatibus voluptas ad odit. Soluta,
-        voluptates earum, ab sed perspiciatis voluptatem maiores alias reiciendis laudantium repellendus perferendis.
-        Explicabo error incidunt aliquam voluptates cupiditate porro saepe.</p>
-    <a href="https:www.its-ictpiemonte.it" target="_blank">ITS Academy</a>
 
-    <div style="width: 400px; border: 1px solid black; padding: 10px; background-color: brown;">
+
+    <div
+        style="width: 400px; border: 1px solid black; padding: 10px; background-color: brown; padding: 20px; float: left;">
         <!-- Il tag div è un contenitore generico che non ha significato semantico, ma viene utilizzato per raggruppare elementi e applicare stili o layout -->
-        <h2>
-            <!-- Titolo cliccabile -->
-
-
-        </h2>
+        <h2 title="Il Barore rampante Italo Calvino">
+            Il Barone Rampante di Italo Calvino</h2>
         <!--Immagine copertina libro-->
         <img src="./img/copertina_libro_il_barone_rampante.jpg"
             alt="Copertina del libro Il Barone Rampante di Italo Calvino" title="Il Barone Rampante di Italo Calvino"
             style="width: 60%; height: auto;">
+        <h2 title="Trama del Barone Rampante Italo Calvino">
+            Trama</h2>
         <p title="Il Barore rampante Italo Calvino">
             Il baroner rampante è un romanzo di Italo Calvino pubblicato nel 1957. Racconta la storia di Cosimo Piovasco
             di
@@ -40,11 +35,69 @@
             della sua famiglia. Il romanzo esplora temi come la libertà, l'individualismo e la critica alla società del
             tempo, offrendo una narrazione ricca di fantasia e simbolismo.
         </p>
-        <p title="Trama del Barone rampante" style="color: blue;">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla repellendus quibusdam, iure quasi labore
-            sapiente quo dicta, quam tempore ipsam, et esse facere quas. Voluptas delectus qui adipisci vel quia.
 
+
+
+    </div>
+    <div
+        style="width: 400px; border: 1px solid black; padding: 10px; background-color: rgb(75, 75, 145); padding: 20px; float: left;">
+        <!-- Il tag div è un contenitore generico che non ha significato semantico, ma viene utilizzato per raggruppare elementi e applicare stili o layout -->
+        <h2 title="Il Visconte dimmezato Italo Calvino">
+            Il Visconte dimezzato</h2>
+        <!--Immagine copertina libro-->
+        <img src="./img/copertina_libro_il_visconte_dimmezato.JPG" alt="Copertina del libro Il Visconte dimmezato"
+            title="Il Barone Rampante di Italo Calvino" style="width: 60%; height: auto;">
+        <h2 title="Trama del Visconte dimmezato Italo Calvino">
+            Trama</h2>
+        <p title="Il Barore rampante Italo Calvino">
+            Il Visconte dimezzato è un romanzo di Italo Calvino pubblicato nel 1952. Racconta la storia di Medardo di
+            Terralba, un visconte che viene colpito da una palla di cannone durante una battaglia e si ritrova diviso in
+            due metà: una metà buona e l'altra metà cattiva. Il romanzo esplora temi come la dualità dell'animo umano,
+            la lotta tra il bene
         </p>
+
+
+
+    </div>
+    <div
+        style="width: 400px; border: 1px solid black; padding: 10px; background-color: yellowgreen; padding: 20px; float: left;">
+        <!-- Il tag div è un contenitore generico che non ha significato semantico, ma viene utilizzato per raggruppare elementi e applicare stili o layout -->
+        <h2 title="Il Cavaliere inesistente Italo Calvino">
+            Il Cavaliere inesistente</h2>
+        <!--Immagine copertina libro-->
+        <img src="./img/copertina_libro_il_cavaliere_inesistente.jpg" alt="Copertina del libro il Cavaliere inesistente"
+            title="Il Barone Rampante di Italo Calvino" style="width: 60%; height: auto;">
+        <h2 title="Trama del Cavaliere inesistente Italo Calvino">
+            Trama</h2>
+        <p title="Il Cavaliere inesistente">
+            Il Cavaliere inesistente è un romanzo di Italo Calvino pubblicato nel 1959. Racconta la storia di Agilulfo,
+            un
+            cavaliere che esiste solo come armatura vuota, senza un corpo o un'anima. Il romanzo esplora temi come
+            l'identità, la realtà e l'assurdità della condizione umana, offrendo una narrazione ricca di ironia e
+            riflessione filosofica.
+        </p>
+
+
+
+    </div>
+    <div
+        style="width: 400px; border: 1px solid black; padding: 10px; background-color: rgb(224, 121, 198); padding: 20px; float: left;">
+        <!-- Il tag div è un contenitore generico che non ha significato semantico, ma viene utilizzato per raggruppare elementi e applicare stili o layout -->
+        <h2 title="Marcovaldo, il figlio del diavolo Italo Calvino">
+            Marcovaldo, il figlio del diavolo</h2>
+        <!--Immagine copertina libro-->
+        <img src="./img/copertina_libro_il_figlio_del_diavolo.jpg"
+            alt="Copertina del libro Marcovaldo, il figlio del diavolo" title="Marcovaldo, il figlio del diavolo"
+            style="width: 60%; height: auto;">
+        <h2 title="Trama del Marcovaldo, il figlio del diavolo Italo Calvino">
+            Trama</h2>
+        <p title="Marcovaldo, il figlio del diavolo">
+            Marcovaldo, il figlio del diavolo è una raccolta di racconti di Italo Calvino pubblicata nel 1963. Racconta
+            le avventure di Marcovaldo, un uomo semplice e sognatore che vive in una grande città industriale. I
+            racconti esplorano temi come la natura, la solitudine e la ricerca della felicità, offrendo una narrazione
+            ricca di umorismo e poesia.
+        </p>
+
 
 
     </div>
