--- a/Lezione_1/index.html
+++ b/Lezione_1/index.html
@@ -44,7 +44,7 @@
             </p>
         </div>
 
-        <div style="width: 400px; border: 1px solid black; padding: 20px; background-color: yellowgreen; float: left; margin: 10px; box-sizing: border-box;">
+        <div style="width: 400px; border: 1px solid black; padding: 20px; background-color: yellowgreen; color: white; float: left; margin: 10px; box-sizing: border-box;">
             <h2 title="Il Cavaliere inesistente Italo Calvino">Il Cavaliere inesistente</h2>
             <img src="./img/copertina_libro_il_cavaliere_inesistente.jpg"
                 alt="Copertina del libro Il Cavaliere inesistente" 
@@ -79,7 +79,7 @@
             </p>
         </div>
 
-        <div style="width: 400px; border: 1px solid black; padding: 20px; background-color: yellowgreen; float: left; margin: 10px; box-sizing: border-box; border-radius: 10px;">
+        <div style="width: 400px; border: 1px solid black; padding: 20px; background-color: yellowgreen; color: white; float: left; margin: 10px; box-sizing: border-box; border-radius: 10px;">
             <h2 title="Album Abbey Road dei Beatles">Abbey Road - The Beatles</h2>
             <img src="./img/copertina_album_abbey_road.jpg" 
                 alt="Copertina dell'album Abbey Road dei Beatles"
@@ -93,7 +93,7 @@
             </p>
         </div>
 
-        <div style="width: 400px; border: 1px solid black; padding: 20px; background-color: burlywood; float: left; margin: 10px; box-sizing: border-box; border-radius: 10px;">
+        <div style="width: 400px; border: 1px solid black; padding: 20px; background-color: burlywood; color: white; float: left; margin: 10px; box-sizing: border-box; border-radius: 10px;">
             <h2 title="Album Thriller di Michael Jackson">Thriller - Michael Jackson</h2>
             <img src="./img/copertina_album_thriller.jpg" 
                 alt="Copertina dell'album Thriller di Michael Jackson"
