--- a/Lezione_1/index.html
+++ b/Lezione_1/index.html
@@ -62,7 +62,7 @@
 
     <!-- Sezione Album Musicali -->
     <section id="album" title="I miei album musicali" style="clear: both;">
-        <h2 style="color: rgb(0, 0, 0);">I miei album musicali preferiti</h2>
+        <h2 style="color: rgb(0, 0, 0);">I miei album musicali</h2>
         
         <div style="width: 400px; border: 1px solid black; padding: 20px; background-color: rgb(75, 75, 145); color: white; float: left; margin: 10px; box-sizing: border-box; border-radius: 10px;">
             <h2 title="Album The Dark Side of the Moon dei Pink Floyd">The Dark Side of the Moon - Pink Floyd</h2>
