--- a/Lezione_1/index.html
+++ b/Lezione_1/index.html
@@ -68,7 +68,7 @@
             style="width: 400px; border: 1px solid black; padding: 20px; background-color: rgb(75, 75, 145); color: white; float: left; margin: 10px; box-sizing: border-box; border-radius: 10px;">
 
             <a href="https://www.amazon.it/s?k=the+dark+side+of+the+moon+pink+floyd"
-                style="display: block; text-align: center;">
+                style="display: block; text-align: center;" target="_blank">
                 <img src="./img/copertina_album_the_dark_side_of_the_moon.jpg"
                     alt="Copertina dell'album The Dark Side of the Moon dei Pink Floyd"
                     title="The Dark Side of the Moon - Pink Floyd" style="width: 60%; height: auto;"></a>
@@ -78,7 +78,7 @@
         <div
             style="width: 400px; border: 1px solid black; padding: 20px; background-color: yellowgreen; color: white; float: left; margin: 10px; box-sizing: border-box; border-radius: 10px;">
 
-            <a href="https://www.amazon.it/s?k=abbey+road+the+beatles" style="display: block; text-align: center;">
+            <a href="https://www.amazon.it/s?k=abbey+road+the+beatles" style="display: block; text-align: center;" target="_blank">
                 <img src="./img/copertina_album_abbey_road.jpg" alt="Copertina dell'album Abbey Road dei Beatles"
                     title="Abbey Road - The Beatles" style="width: 60%; height: auto;"></a>
             <h3 title="Descrizione dell'album Abbey Road dei Beatles">Descrizione</h3>
@@ -88,7 +88,7 @@
         <div
             style="width: 400px; border: 1px solid black; padding: 20px; background-color: black; color: white; float: left; margin: 10px; box-sizing: border-box; border-radius: 10px;">
 
-            <a href="https://www.amazon.it/s?k=pain+remains+lorna+shore" style="display: block; text-align: center;">
+            <a href="https://www.amazon.it/s?k=pain+remains+lorna+shore" style="display: block; text-align: center;" target="_blank">
                 <img src="./img/copertina_album_pain_remains.webp"
                     alt="Copertina dell'album Pain Remains di Lorna Shore" title="Pain Remains - Lorna Shore"
                     style="width: 60%; height: auto; "></a>
