--- a/Lezione_1/index.html
+++ b/Lezione_1/index.html
@@ -11,17 +11,17 @@
     <h1 style="font-size: 300%;">Questa è la lezione 1</h1>
 
     <!-- Sezione Libri -->
-    <section id="libri" title="i miei libri">
-        <h2 style="color: rgb(0, 0, 0);">I miei libri preferiti</h2>
+    <section id="libri">
+        <h2>I miei libri preferiti</h2>
 
         <div
             style="width: 400px; border: 1px solid black; padding: 20px; background-color: brown; color: white; float: left; margin: 10px; box-sizing: border-box;">
-            <h2 title="Il Barone rampante Italo Calvino">Il Barone Rampante di Italo Calvino</h2>
+            <h2>Il Barone Rampante di Italo Calvino</h2> <!-- Rimosso title -->
             <img src="./img/copertina_libro_il_barone_rampante.jpg"
                 alt="Copertina del libro Il Barone Rampante di Italo Calvino"
-                title="Il Barone Rampante di Italo Calvino" style="width: 60%; height: auto;">
-            <h3 title="Trama del Barone Rampante Italo Calvino">Trama</h3>
-            <p title="Il Barone rampante Italo Calvino">
+                style="width: 60%; height: auto;">
+            <h3>Trama</h3> <!-- Rimosso title -->
+            <p> <!-- Rimosso title -->
                 Il Barone Rampante è un romanzo di Italo Calvino pubblicato nel 1957. Racconta la storia di Cosimo
                 Piovasco di Rondò, un giovane nobile che decide di vivere sugli alberi per sfuggire alle convenzioni
                 sociali e alla rigidità della sua famiglia. Il romanzo esplora temi come la libertà, l'individualismo
@@ -31,11 +31,11 @@
 
         <div
             style="width: 400px; border: 1px solid black; padding: 20px; background-color: rgb(75, 75, 145); color: white; float: left; margin: 10px; box-sizing: border-box;">
-            <h2 title="Il Visconte dimezzato Italo Calvino">Il Visconte dimezzato</h2>
-            <img src="./img/copertina_libro_il_visconte_dimmezato.JPG" alt="Copertina del libro Il Visconte dimezzato"
-                title="Il Visconte dimezzato di Italo Calvino" style="width: 60%; height: auto;">
-            <h3 title="Trama del Visconte dimezzato Italo Calvino">Trama</h3>
-            <p title="Il Visconte dimezzato Italo Calvino">
+            <h2>Il Visconte dimezzato</h2> <!-- Rimosso title -->
+            <img src="./img/copertina_libro_il_visconte_dimezzato.jpg" alt="Copertina del libro Il Visconte dimezzato" <!-- CORRETTO: dimezzato con una z e estensione .jpg -->
+                style="width: 60%; height: auto;">
+            <h3>Trama</h3> <!-- Rimosso title -->
+            <p> <!-- Rimosso title -->
                 Il Visconte dimezzato è un romanzo di Italo Calvino pubblicato nel 1952. Racconta la storia di Medardo
                 di Terralba, un visconte che viene colpito da una palla di cannone durante una battaglia e si ritrova
                 diviso in due metà: una metà buona e l'altra metà cattiva. Il romanzo esplora temi come la dualità
@@ -45,13 +45,12 @@
 
         <div
             style="width: 400px; border: 1px solid black; padding: 20px; background-color: yellowgreen; color: white; float: left; margin: 10px; box-sizing: border-box;">
-            <h2 title="Il Cavaliere inesistente Italo Calvino">Il Cavaliere inesistente</h2>
-
+            <h2>Il Cavaliere inesistente</h2> <!-- Rimosso title -->
             <img src="./img/copertina_libro_il_cavaliere_inesistente.jpg"
-                alt="Copertina del libro Il Cavaliere inesistente" title="Il Cavaliere inesistente di Italo Calvino"
+                alt="Copertina del libro Il Cavaliere inesistente"
                 style="width: 60%; height: auto;">
-            <h3 title="Trama del Cavaliere inesistente Italo Calvino">Trama</h3>
-            <p title="Il Cavaliere inesistente">
+            <h3>Trama</h3> <!-- Rimosso title -->
+            <p> <!-- Rimosso title -->
                 Il Cavaliere inesistente è un romanzo di Italo Calvino pubblicato nel 1959. Racconta la storia di
                 Agilulfo, un cavaliere che esiste solo come armatura vuota, senza un corpo o un'anima. Il romanzo
                 esplora temi come l'identità, la realtà e l'assurdità della condizione umana, offrendo una narrazione
@@ -61,8 +60,8 @@
     </section>
 
     <!-- Sezione Album Musicali -->
-    <section id="album" title="I miei album musicali" style="clear: both;">
-        <h2 style="color: rgb(0, 0, 0);">I miei album musicali</h2>
+    <section id="album" style="clear: both;">
+        <h2>I miei album musicali</h2> <!-- Rimosso style colore -->
 
         <div
             style="width: 400px; border: 1px solid black; padding: 20px; background-color: rgb(75, 75, 145); color: white; float: left; margin: 10px; box-sizing: border-box; border-radius: 10px;">
@@ -71,8 +70,9 @@
                 style="display: block; text-align: center;" target="_blank">
                 <img src="./img/copertina_album_the_dark_side_of_the_moon.jpg"
                     alt="Copertina dell'album The Dark Side of the Moon dei Pink Floyd"
-                    title="The Dark Side of the Moon - Pink Floyd" style="width: 60%; height: auto;"></a>
-            <h2 title="Album The Dark Side of the Moon dei Pink Floyd">The Dark Side of the Moon - Pink Floyd</h2>
+                    style="width: 60%; height: auto;"></a>
+            <h2>The Dark Side of the Moon - Pink Floyd</h2> <!-- Rimosso title -->
+            <!-- Se vuoi una descrizione, aggiungi <h3> e <p> qui -->
         </div>
 
         <div
@@ -80,20 +80,22 @@
 
             <a href="https://www.amazon.it/s?k=abbey+road+the+beatles" style="display: block; text-align: center;" target="_blank">
                 <img src="./img/copertina_album_abbey_road.jpg" alt="Copertina dell'album Abbey Road dei Beatles"
-                    title="Abbey Road - The Beatles" style="width: 60%; height: auto;"></a>
-            <h3 title="Descrizione dell'album Abbey Road dei Beatles">Descrizione</h3>
-            <h2 title="Album Abbey Road dei Beatles">Abbey Road - The Beatles</h2>
+                    style="width: 60%; height: auto;"></a>
+            <h2>Abbey Road - The Beatles</h2> <!-- Titolo spostato sopra -->
+            <h3>Descrizione</h3> <!-- Sottotitolo sotto il titolo -->
+            <!-- Aggiungi qui il paragrafo <p> con la descrizione -->
         </div>
 
         <div
             style="width: 400px; border: 1px solid black; padding: 20px; background-color: black; color: white; float: left; margin: 10px; box-sizing: border-box; border-radius: 10px;">
 
             <a href="https://www.amazon.it/s?k=pain+remains+lorna+shore" style="display: block; text-align: center;" target="_blank">
-                <img src="./img/copertina_album_pain_remains.webp"
-                    alt="Copertina dell'album Pain Remains di Lorna Shore" title="Pain Remains - Lorna Shore"
+                <img src="./img/copertina_album_pain_remains.jpg" <!-- CORRETTO: estensione .jpg (o .png) -->
+                    alt="Copertina dell'album Pain Remains di Lorna Shore"
                     style="width: 60%; height: auto; "></a>
-            <h3 title="Descrizione dell'album Thriller di Michael Jackson">Descrizione</h3>
-            <h2 title="Album Pain Remains">Pain Remains-Lorna Shore</h2>
+            <h2>Pain Remains - Lorna Shore</h2> <!-- Titolo spostato sopra e formattato -->
+            <h3>Descrizione</h3> <!-- Sottotitolo sotto il titolo -->
+            <!-- Aggiungi qui il paragrafo <p> con la descrizione -->
         </div>
     </section>
 
