--- a/Lezione_2/project2/index.html
+++ b/Lezione_2/project2/index.html
@@ -16,14 +16,13 @@
         <section id="album-musicali" class="section">
             <div class="container">
                 <h2 class="section-title">Album Musicali</h2>
-                
+
                 <div class="album-grid">
                     <!-- Album 1 -->
                     <div class="album-card">
                         <div class="album-image">
-                            <img src="./img/copertina_album_the_dark_side_of_the_moon.jpg" 
-                                 alt="Copertina The Dark Side of the Moon - Pink Floyd"
-                                 loading="lazy">
+                            <img src="./img/copertina_album_the_dark_side_of_the_moon.jpg"
+                                alt="Copertina The Dark Side of the Moon - Pink Floyd" loading="lazy">
                         </div>
                         <div class="album-info">
                             <h3>The Dark Side of the Moon</h3>
@@ -35,9 +34,7 @@
                     <!-- Album 2 -->
                     <div class="album-card">
                         <div class="album-image">
-                            <img src="./img/copertina_album_abbey_road.jpg" 
-                                 alt="Copertina Abbey Road"
-                                 loading="lazy">
+                            <img src="./img/copertina_album_abbey_road.jpg" alt="Copertina Abbey Road" loading="lazy">
                         </div>
                         <div class="album-info">
                             <h3>Abbey Road</h3>
@@ -49,9 +46,8 @@
                     <!-- Album 3 -->
                     <div class="album-card">
                         <div class="album-image">
-                            <img src="./img/copertina_album_pain_remains.webp" 
-                                 alt="Copertina Pain Remains Lorna Shore"
-                                 loading="lazy">
+                            <img src="./img/copertina_album_pain_remains.webp" alt="Copertina Pain Remains Lorna Shore"
+                                loading="lazy">
                         </div>
                         <div class="album-info">
                             <h3>Pain Remains</h3>
@@ -63,11 +59,120 @@
             </div>
         </section>
 
+        <!-- NUOVA SEZIONE: Copertine Singoli (coerenti con gli album) -->
+        <section id="copertine-singoli" class="section">
+            <div class="container">
+                <h2 class="section-title">Singoli dagli Album</h2>
+
+                <div class="singoli-grid">
+                    <!-- Singoli da The Dark Side of the Moon - Pink Floyd -->
+                    <div class="singolo-card">
+                        <div class="singolo-image">
+                            <img src="./img/copertina_singolo_money.jpg" alt="Copertina Money - Pink Floyd"
+                                loading="lazy">
+                            <div class="singolo-overlay">
+                                <span class="play-icon">▶</span>
+                            </div>
+                        </div>
+                        <div class="singolo-info">
+                            <h3>Money</h3>
+                            <p class="singolo-artist">Pink Floyd</p>
+                            <p class="singolo-album">The Dark Side of the Moon</p>
+                            <p class="singolo-year">1973</p>
+                        </div>
+                    </div>
+
+                    <div class="singolo-card">
+                        <div class="singolo-image">
+                            <img src="./img/copertina_singolo_time.jpg" alt="Copertina Time - Pink Floyd"
+                                loading="lazy">
+                            <div class="singolo-overlay">
+                                <span class="play-icon">▶</span>
+                            </div>
+                        </div>
+                        <div class="singolo-info">
+                            <h3>Time</h3>
+                            <p class="singolo-artist">Pink Floyd</p>
+                            <p class="singolo-album">The Dark Side of the Moon</p>
+                            <p class="singolo-year">1973</p>
+                        </div>
+                    </div>
+
+                    <!-- Singoli da Abbey Road - The Beatles -->
+                    <div class="singolo-card">
+                        <div class="singolo-image">
+                            <img src="./img/copertina_singolo_come_together.jpg"
+                                alt="Copertina Come Together - The Beatles" loading="lazy">
+                            <div class="singolo-overlay">
+                                <span class="play-icon">▶</span>
+                            </div>
+                        </div>
+                        <div class="singolo-info">
+                            <h3>Come Together</h3>
+                            <p class="singolo-artist">The Beatles</p>
+                            <p class="singolo-album">Abbey Road</p>
+                            <p class="singolo-year">1969</p>
+                        </div>
+                    </div>
+
+                    <div class="singolo-card">
+                        <div class="singolo-image">
+                            <img src="./img/copertina_singolo_something.jpg" alt="Copertina Something - The Beatles"
+                                loading="lazy">
+                            <div class="singolo-overlay">
+                                <span class="play-icon">▶</span>
+                            </div>
+                        </div>
+                        <div class="singolo-info">
+                            <h3>Something</h3>
+                            <p class="singolo-artist">The Beatles</p>
+                            <p class="singolo-album">Abbey Road</p>
+                            <p class="singolo-year">1969</p>
+                        </div>
+                    </div>
+
+                    <!-- Singoli da Pain Remains - Lorna Shore -->
+                    <div class="singolo-card">
+                        <div class="singolo-image">
+                            <img src="./img/copertina_singolo_pain_remains_I.jpg"
+                                alt="Copertina Pain Remains I: Dancing Like Flames - Lorna Shore" loading="lazy">
+                            <div class="singolo-overlay">
+                                <span class="play-icon">▶</span>
+                            </div>
+                        </div>
+                        <div class="singolo-info">
+                            <h3>Pain Remains I: Dancing Like Flames</h3>
+                            <p class="singolo-artist">Lorna Shore</p>
+                            <p class="singolo-album">Pain Remains</p>
+                            <p class="singolo-year">2022</p>
+                        </div>
+                    </div>
+
+                    <div class="singolo-card">
+                        <div class="singolo-image">
+                            <img src="./img/copertina_singolo_pain_remains_II.jpg"
+                                alt="Copertina Pain Remains II: After All I've Done, I'll Disappear - Lorna Shore"
+                                loading="lazy">
+                            <div class="singolo-overlay">
+                                <span class="play-icon">▶</span>
+                            </div>
+                        </div>
+                        <div class="singolo-info">
+                            <h3>Pain Remains II: After All I've Done, I'll Disappear</h3>
+                            <p class="singolo-artist">Lorna Shore</p>
+                            <p class="singolo-album">Pain Remains</p>
+                            <p class="singolo-year">2022</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <!-- Sezione Testi -->
         <section id="testi" class="section">
             <div class="container">
                 <h2 class="section-title">Testi Musicali</h2>
-                
+
                 <div class="testi-grid">
                     <!-- Primo paragrafo -->
                     <article class="testo-card">
@@ -104,7 +209,7 @@
         </section>
     </main>
 
-    <!-- Footer opzionale -->
+    <!-- Footer -->
     <footer class="footer">
         <div class="container">
             <p>&copy; 2024 Album Musicali. Tutti i diritti riservati.</p>
