--- a/Lezione_2/project2/index.html
+++ b/Lezione_2/project2/index.html
@@ -502,6 +502,131 @@
                 </div>
             </div>
         </section>
+        <!-- ===== SEZIONE CONSIGLI DELLA COMMUNITY ===== -->
+        <section id="consigli-community" class="section">
+            <div class="container">
+                <h2 class="section-title">Consigli della Community</h2>
+
+                <div class="consigli-grid">
+                    <!-- Consiglio 1 -->
+                    <article class="consiglio-card">
+                        <div class="consiglio-header">
+                            <span class="consiglio-icon">🎤</span>
+                            <div class="consiglio-user">
+                                <h3>Bohemian Rhapsody</h3>
+                                <p class="consiglio-artista">Queen</p>
+                            </div>
+                        </div>
+                        <p class="consiglio-motivazione">
+                            "Un capolavoro senza tempo, mescola rock, opera e testi profondi. Da ascoltare almeno una
+                            volta nella vita!"
+                        </p>
+                        <div class="consiglio-footer">
+                            <span class="consiglio-nome">Consigliato da: Marco</span>
+                            <span class="consiglio-data">2 giorni fa</span>
+                        </div>
+                    </article>
+
+                    <!-- Consiglio 2 -->
+                    <article class="consiglio-card">
+                        <div class="consiglio-header">
+                            <span class="consiglio-icon">🎸</span>
+                            <div class="consiglio-user">
+                                <h3>Stairway to Heaven</h3>
+                                <p class="consiglio-artista">Led Zeppelin</p>
+                            </div>
+                        </div>
+                        <p class="consiglio-motivazione">
+                            "L'assolo di chitarra più bello di sempre. Un viaggio musicale che parte piano e diventa
+                            epico."
+                        </p>
+                        <div class="consiglio-footer">
+                            <span class="consiglio-nome">Consigliato da: Laura</span>
+                            <span class="consiglio-data">5 giorni fa</span>
+                        </div>
+                    </article>
+
+                    <!-- Consiglio 3 -->
+                    <article class="consiglio-card">
+                        <div class="consiglio-header">
+                            <span class="consiglio-icon">🎹</span>
+                            <div class="consiglio-user">
+                                <h3>Imagine</h3>
+                                <p class="consiglio-artista">John Lennon</p>
+                            </div>
+                        </div>
+                        <p class="consiglio-motivazione">
+                            "Un inno alla pace che tocca il cuore. Semplice ma profondo, il testo è più attuale che
+                            mai."
+                        </p>
+                        <div class="consiglio-footer">
+                            <span class="consiglio-nome">Consigliato da: Giuseppe</span>
+                            <span class="consiglio-data">1 settimana fa</span>
+                        </div>
+                    </article>
+
+                    <!-- Consiglio 4 -->
+                    <article class="consiglio-card">
+                        <div class="consiglio-header">
+                            <span class="consiglio-icon">🥁</span>
+                            <div class="consiglio-user">
+                                <h3>Hotel California</h3>
+                                <p class="consiglio-artista">Eagles</p>
+                            </div>
+                        </div>
+                        <p class="consiglio-motivazione">
+                            "L'intro di chitarra, il mistero del testo, l'atmosfera... un brano che non stanca mai."
+                        </p>
+                        <div class="consiglio-footer">
+                            <span class="consiglio-nome">Consigliato da: Anna</span>
+                            <span class="consiglio-data">2 settimane fa</span>
+                        </div>
+                    </article>
+
+                    <!-- Consiglio 5 -->
+                    <article class="consiglio-card">
+                        <div class="consiglio-header">
+                            <span class="consiglio-icon">🎻</span>
+                            <div class="consiglio-user">
+                                <h3>Nothing Else Matters</h3>
+                                <p class="consiglio-artista">Metallica</p>
+                            </div>
+                        </div>
+                        <p class="consiglio-motivazione">
+                            "La ballata dei Metallica che ha fatto innamorare anche chi non ama il metal. Emozione
+                            pura."
+                        </p>
+                        <div class="consiglio-footer">
+                            <span class="consiglio-nome">Consigliato da: Davide</span>
+                            <span class="consiglio-data">3 settimane fa</span>
+                        </div>
+                    </article>
+
+                    <!-- Consiglio 6 -->
+                    <article class="consiglio-card">
+                        <div class="consiglio-header">
+                            <span class="consiglio-icon">🎷</span>
+                            <div class="consiglio-user">
+                                <h3>Careless Whisper</h3>
+                                <p class="consiglio-artista">George Michael</p>
+                            </div>
+                        </div>
+                        <p class="consiglio-motivazione">
+                            "Il sassofono più famoso della storia. Una canzone che ti rimane in testa per sempre."
+                        </p>
+                        <div class="consiglio-footer">
+                            <span class="consiglio-nome">Consigliato da: Sofia</span>
+                            <span class="consiglio-data">1 mese fa</span>
+                        </div>
+                    </article>
+                </div>
+
+                <!-- Pulsante per vedere altri consigli (opzionale) -->
+                <div class="consigli-more">
+                    <button class="consigli-button">Carica altri consigli</button>
+                </div>
+            </div>
+        </section>
     </main>
 
     <!-- ===== FOOTER ===== -->
